--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.google.android.gms:play-services:8.1.0'
     compile 'com.android.support:multidex:1.0.1'
+    compile 'com.pnikosis:materialish-progress:1.7'
     compile project(path: ':backend', configuration: 'android-endpoints')
 }
