Removed unnecessary MultiDexing

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,6 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
-        multiDexEnabled = true
     }
     buildTypes {
         release {
@@ -34,8 +33,7 @@ dependencies {
     compile project(':jokesdisplay')
     compile project(path: ':backend', configuration: 'android-endpoints')
     compile 'com.android.support:appcompat-v7:23.1.0'
-    compile 'com.android.support:multidex:1.0.1'
     compile 'com.pnikosis:materialish-progress:1.7'
     compile 'com.android.support:support-v4:23.1.0'
-    freeCompile 'com.google.android.gms:play-services:8.1.0'
+    freeCompile 'com.google.android.gms:play-services-ads:8.1.0'
 }
